--- a/views/employee_views.xml
+++ b/views/employee_views.xml
@@ -9,8 +9,8 @@
             <field name="arch" type="xml">
                 <!-- Add your new fields here -->
                 <xpath expr="//field[@name='work_location']" position="after">
-                    <field name="trip_request_ids" widget="many2many_tags"/>
-                    <field name="allowed_destination_ids"/>
+                    <field name="trip_request_ids" />
+                    <field name="allowed_destination_ids" widget="many2many_tags"/>
                 </xpath>
             </field>
         </record>
